--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,17 +6,40 @@
     android:layout_height="match_parent"
     tools:context=".ui.home.HomeFragment">
 
-    <TextView
-        android:id="@+id/text_home"
+    <GridLayout
+        android:id="@+id/gridLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="match_parent"
+        android:columnCount="3"
+        android:orientation="horizontal"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <TextView
+            android:drawableTop="@drawable/zency"
+            android:id="@+id/icon1"
+            android:layout_rowSpan="5"
+            android:layout_columnSpan="3"
+            android:background="#6EC1BC"
+            android:text="盒子1"
+            android:textSize="20sp" />
+
+<!--        <TextView-->
+<!--            android:drawableTop="@drawable/zency"-->
+<!--            android:id="@+id/icon2"-->
+<!--            android:layout_rowSpan="5"-->
+<!--            android:layout_columnSpan="2"-->
+<!--            android:background="#25D31F"-->
+<!--            android:text="盒子3"-->
+<!--            android:textSize="20sp" />-->
+
+    </GridLayout>
+    <TextView
+    android:id="@+id/text_home"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:textAlignment="center"
+    android:textColor="#F9F900"
+    android:textSize="20sp"
+    tools:ignore="MissingConstraints" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
