--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,63 +10,51 @@
     <GridLayout
         android:id="@+id/gridLayout"
         android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="center_vertical"
+        android:columnCount="3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center_horizontal"
-        android:columnCount="3"
-        tools:ignore="MissingConstraints"
         >
 
         <TextView
+            android:paddingTop="30dp"
+            android:paddingBottom="20dp"
             android:id="@+id/icon1"
-            android:layout_width="wrap_content"
-            android:layout_row="0"
+            android:layout_width="120dp"
+            android:layout_height="160dp"
             android:layout_rowSpan="1"
             android:layout_columnSpan="1"
             android:background="@drawable/home_icon"
-            android:drawableTop="@drawable/ic_launcher_foreground"
-            android:gravity="center"
-            android:text="盒子1"
+            android:drawableTop="@drawable/clock"
+            android:gravity="bottom|center"
+            android:text="闹钟"
             android:textSize="20sp" />
 
         <TextView
+            android:paddingTop="30dp"
+            android:paddingBottom="20dp"
             android:id="@+id/icon2"
+            android:layout_width="120dp"
+            android:layout_height="160dp"
             android:layout_rowSpan="1"
             android:layout_columnSpan="1"
             android:background="@drawable/home_icon"
-            android:drawableTop="@drawable/ic_launcher_foreground"
-            android:gravity="center"
+            android:drawableTop="@drawable/clock"
+            android:gravity="bottom|center"
             android:text="盒子3"
             android:textSize="20sp" />
 
         <TextView
+            android:paddingBottom="20dp"
             android:id="@+id/icon3"
+            android:layout_width="120dp"
+            android:layout_height="160dp"
             android:layout_rowSpan="1"
             android:layout_columnSpan="1"
             android:background="@drawable/home_icon"
             android:drawableTop="@drawable/ic_launcher_foreground"
-            android:gravity="center"
-            android:text="盒子3"
-            android:textSize="20sp" />
-
-        <TextView
-            android:id="@+id/icon4"
-            android:layout_rowSpan="1"
-            android:layout_columnSpan="1"
-            android:background="@drawable/home_icon"
-            android:drawableTop="@drawable/ic_launcher_foreground"
-            android:gravity="center"
-            android:text="盒子3"
-            android:textSize="20sp" />
-
-        <TextView
-            android:id="@+id/icon5"
-            android:layout_rowSpan="1"
-            android:layout_columnSpan="1"
-            android:background="@drawable/home_icon"
-            android:drawableTop="@drawable/ic_launcher_foreground"
-            android:gravity="center"
+            android:gravity="bottom|center"
             android:text="盒子3"
             android:textSize="20sp" />
 
