--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,6 +7,7 @@
     tools:context=".ui.home.HomeFragment">
 
 
+
     <GridLayout
         android:id="@+id/gridLayout"
         android:layout_width="wrap_content"
@@ -18,6 +19,7 @@
         >
 
         <TextView
+            android:background="@drawable/home_icon"
             android:paddingTop="30dp"
             android:paddingBottom="20dp"
             android:id="@+id/icon1"
@@ -25,13 +27,13 @@
             android:layout_height="160dp"
             android:layout_rowSpan="1"
             android:layout_columnSpan="1"
-            android:background="@drawable/home_icon"
-            android:drawableTop="@drawable/clock"
             android:gravity="bottom|center"
             android:text="闹钟"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            app:drawableTopCompat="@drawable/clock" />
 
         <TextView
+            android:background="@drawable/home_icon"
             android:paddingTop="30dp"
             android:paddingBottom="20dp"
             android:id="@+id/icon2"
@@ -39,20 +41,19 @@
             android:layout_height="160dp"
             android:layout_rowSpan="1"
             android:layout_columnSpan="1"
-            android:background="@drawable/home_icon"
             android:drawableTop="@drawable/clock"
             android:gravity="bottom|center"
             android:text="盒子3"
             android:textSize="20sp" />
 
         <TextView
+            android:background="@drawable/home_icon"
             android:paddingBottom="20dp"
             android:id="@+id/icon3"
             android:layout_width="120dp"
             android:layout_height="160dp"
             android:layout_rowSpan="1"
             android:layout_columnSpan="1"
-            android:background="@drawable/home_icon"
             android:drawableTop="@drawable/ic_launcher_foreground"
             android:gravity="bottom|center"
             android:text="盒子3"
