--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -28,7 +28,7 @@
             android:gravity="bottom|center"
             android:paddingTop="30dp"
             android:paddingBottom="20dp"
-            android:text="闹钟"
+            android:text="定期通知器"
             android:textSize="20sp"
             app:drawableTopCompat="@drawable/clock" />
 
