--- a/app/src/main/res/layout/activity_timer.xml
+++ b/app/src/main/res/layout/activity_timer.xml
@@ -64,6 +64,7 @@
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
+           android:gravity="bottom"
            android:text="开始时间"/>
        <DatePicker
            android:layout_width="match_parent"
