--- a/app/src/main/res/layout/activity_timer.xml
+++ b/app/src/main/res/layout/activity_timer.xml
@@ -48,12 +48,6 @@
             android:layout_width="50dp"
             android:hint="分"
             android:layout_height="50dp"/>
-        <EditText
-            android:id="@+id/second"
-            android:inputType="number"
-            android:layout_width="50dp"
-            android:hint="秒"
-            android:layout_height="50dp"/>
     </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
@@ -73,6 +67,11 @@
            android:id="@+id/assure"
            android:layout_width="200dp"
            android:text="确定开始"
+           android:layout_height="80dp"/>
+       <Button
+           android:id="@+id/cancel"
+           android:layout_width="200dp"
+           android:text="停止发送"
            android:layout_height="80dp"/>
 
    </LinearLayout>
