--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -21,19 +21,21 @@
         <TextView
             android:id="@+id/icon1"
             android:layout_width="128dp"
+            android:fontFamily="@font/font_family"
             android:layout_height="160dp"
             android:layout_rowSpan="1"
             android:layout_columnSpan="1"
-            android:background="@drawable/home_icon"
+            android:background="@drawable/bc_home_icon"
             android:gravity="bottom|center"
             android:paddingTop="30dp"
             android:paddingBottom="20dp"
             android:text="定期通知器"
             android:textSize="20sp"
-            app:drawableTopCompat="@drawable/clock" />
+            app:drawableTopCompat="@drawable/ic_clock" />
 
         <TextView
-            android:background="@drawable/home_icon"
+            android:background="@drawable/bc_home_icon"
+            android:fontFamily="@font/font_family"
             android:paddingTop="30dp"
             android:paddingBottom="20dp"
             android:id="@+id/icon2"
@@ -41,14 +43,15 @@
             android:layout_height="160dp"
             android:layout_rowSpan="1"
             android:layout_columnSpan="1"
-            android:drawableTop="@drawable/clock"
+            android:drawableTop="@drawable/ic_clock"
             android:gravity="bottom|center"
             android:text="盒子3"
             android:textSize="20sp" />
 
         <TextView
-            android:background="@drawable/home_icon"
+            android:background="@drawable/bc_home_icon"
             android:paddingBottom="20dp"
+            android:fontFamily="@font/font_family"
             android:id="@+id/icon3"
             android:layout_width="120dp"
             android:layout_height="160dp"
