--- a/app/src/main/res/layout/clock_item.xml
+++ b/app/src/main/res/layout/clock_item.xml
@@ -7,6 +7,7 @@
 
         <LinearLayout
             android:padding="20dp"
+            android:layout_marginTop="10dp"
             android:background="@drawable/bc_clock_item"
             android:orientation="horizontal"
             android:layout_width="match_parent"
@@ -20,7 +21,7 @@
                 android:orientation="vertical">
                 <TextView android:id="@+id/itemtitle"
                     android:layout_marginLeft="4dp"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="4dp"
                     android:text="11111"
