增加删除确认

--- a/app/src/main/res/layout/activity_timer.xml
+++ b/app/src/main/res/layout/activity_timer.xml
@@ -80,6 +80,11 @@
            android:layout_width="200dp"
            android:text="确定开始"
            android:layout_height="80dp"/>
+       <Button
+           android:id="@+id/test"
+           android:layout_width="200dp"
+           android:text="测试"
+           android:layout_height="80dp"/>
 
        <LinearLayout
            android:id="@+id/history"
